--- a/test.html
+++ b/test.html
@@ -21,8 +21,10 @@
             font-size: 100px;
         }
         .message {
-            font-size: 24px;
+            font-size: 36px;
+            font-weight: bold;
             color: #333;
+            margin-top: 20px; /* Odsazení od smajlíka */
         }
     </style>
 </head>
