--- a/test.html
+++ b/test.html
@@ -3,45 +3,434 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Údržba</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Prodej SmartClean Vysavače</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        /* General Reset */
+        * {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            flex-direction: column;
+            padding: 0;
+            box-sizing: border-box;
         }
-        .top-line {
-            width: 100%;
-            height: 5cm; /* Výška linky */
-            background-color: rgba(0, 0, 0, 0.5); /* Černá barva s 50% průhledností */
-            position: absolute;
-            top: 0;
-            left: 0;
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            line-height: 1.6;
+            overflow-x: hidden;
+            padding-top: 80px; /* Ensure the header doesn't overlap */
+            scroll-behavior: smooth; /* Enable smooth scrolling */
         }
+
+        /* Global Layout */
         .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+        }
+
+        /* Header Section */
+        header {
+            background: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 9999;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        header nav {
+            margin-top: 10px;
+        }
+
+        header nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1em;
+            transition: color 0.3s ease;
+        }
+
+        header nav a:hover {
+            color: #e74c3c;
+        }
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(135deg, #2ecc71, #3498db);
+            padding: 120px 0;
+            text-align: center;
+            color: white;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        }
+
+        .hero h2 {
+            font-size: 3em;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .hero p {
+            font-size: 1.3em;
+            margin-bottom: 30px;
+        }
+
+        .hero .cta-btn {
+            background: #e74c3c;
+            color: white;
+            padding: 12px 35px;
+            font-size: 1.2em;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .hero .cta-btn:hover {
+            background-color: #c0392b;
+            transform: translateY(-3px);
+        }
+
+        /* Product Section */
+        .product-section {
+            padding: 60px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            margin-top: 60px;
+        }
+
+        .product-img {
+            flex: 1;
+            max-width: 500px;
+            margin-right: 30px;
+        }
+
+        .product-img img {
+            width: 100%;
+            border-radius: 8px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .product-img img:hover {
+            transform: scale(1.05);
+        }
+
+        .product-details {
+            flex: 1;
+            max-width: 500px;
+        }
+
+        .product-details h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .product-details p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            line-height: 1.6;
+        }
+
+        .price {
+            font-size: 2em;
+            color: #e74c3c;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .product-details .cta-btn {
+            background: #2ecc71;
+            color: white;
+            padding: 15px 40px;
+            font-size: 1.3em;
+            text-decoration: none;
+            border-radius: 5px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .product-details .cta-btn:hover {
+            background-color: #27ae60;
+            transform: translateY(-3px);
+        }
+
+        /* Features Section */
+        .features {
+            background-color: #f9f9f9;
+            padding: 60px 0;
             text-align: center;
         }
-        .emoji {
-            font-size: 100px;
+
+        .features h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
         }
-        .message {
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-            margin-top: 20px; /* Odsazení od smajlíka */
+
+        .feature-cards {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .feature-card {
+            background-color: white;
+            flex: 1;
+            margin: 0 15px;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .feature-card i {
+            font-size: 3em;
+            color: #e74c3c;
+            margin-bottom: 20px;
+        }
+
+        .feature-card h3 {
+            font-size: 1.8em;
+            margin-bottom: 15px;
+        }
+
+        .feature-card p {
+            font-size: 1.2em;
+            color: #555;
+        }
+
+        /* FAQ Section */
+        .faq {
+            padding: 60px 0;
+            text-align: center;
+            background-color: #ecf0f1;
+        }
+
+        .faq h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
+        }
+
+        .faq ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .faq li {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            padding-left: 30px;
+        }
+
+        /* Testimonials Section */
+        .testimonials {
+            padding: 60px 0;
+            background-color: #ffffff;
+            text-align: center;
+        }
+
+        .testimonials h2 {
+            font-size: 2.5em;
+            margin-bottom: 40px;
+        }
+
+        .testimonial-cards {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .testimonial-card {
+            background-color: #f9f9f9;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            width: 30%;
+            margin-bottom: 30px;
+            text-align: left;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 250px;
+        }
+
+        .testimonial-card p {
+            font-size: 1.2em;
+            color: #555;
+            margin-bottom: 15px;
+        }
+
+        .testimonial-card h4 {
+            font-size: 1.5em;
+            font-weight: 600;
+            margin-bottom: 15px;
+        }
+
+        .testimonial-card span {
+            color: #2ecc71;
+        }
+
+        .testimonial-card h4, .testimonial-card span {
+            margin-top: auto;
+        }
+
+        /* Footer Section */
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 40px 0;
+            text-align: center;
+        }
+
+        footer p {
+            font-size: 1.1em;
+        }
+
+        footer a {
+            color: #e74c3c;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-    <div class="top-line"></div>
-    <div class="container">
-        <div class="emoji">:(</div>
-        <div class="message">Údržba</div>
-    </div>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <h1>SmartClean Vysavač</h1>
+            <nav>
+                <a href="#product">Produkt</a>
+                <a href="#features">Vlastnosti</a>
+                <a href="#testimonials">Recenze</a>
+                <a href="#faq">FAQ</a>
+                <a href="#buy-now">Koupit</a>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h2>Bezdrátový vysavač pro váš domov</h2>
+            <p>Objevte výkon, tichý chod a dlouhou výdrž baterie, které změní váš úklid.</p>
+            <a href="#product" class="cta-btn">Koupit nyní</a>
+        </div>
+    </section>
+
+    <!-- Product Section -->
+    <section id="product" class="product-section">
+        <div class="container">
+            <div class="product-img">
+                <img src="https://via.placeholder.com/500" alt="SmartClean Vysavač">
+            </div>
+            <div class="product-details">
+                <h2>SmartClean Vysavač</h2>
+                <p>SmartClean je bezdrátový vysavač, který nabízí skvělé výsledky na každém povrchu. Je ideální pro domácnosti s dětmi, zvířaty a alergiky!</p>
+                <p class="price">3 799 Kč</p>
+                <a href="#buy-now" class="cta-btn">Koupit nyní</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Klíčové vlastnosti</h2>
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <i class="fas fa-battery-half"></i>
+                    <h3>Výdrž baterie až 60 minut</h3>
+                    <p>Rychlé nabíjení, dlouhá výdrž pro pohodlný úklid bez přerušení.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-snowflake"></i>
+                    <h3>Tichý provoz</h3>
+                    <p>Uklízejte bez rušení ostatních členů domácnosti.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-hand-sparkles"></i>
+                    <h3>Účinný na všech typech podlah</h3>
+                    <p>Od dřevěných podlah až po koberce, SmartClean zvládne každý úkol.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq" class="faq">
+        <div class="container">
+            <h2>Časté dotazy</h2>
+            <ul>
+                <li>Jak dlouho vydrží baterie? <strong>60 minut na jedno nabití.</strong></li>
+                <li>Je vysavač vhodný pro domácnosti se zvířaty? <strong>Ano, snadno odstraní zvířecí chlupy.</strong></li>
+                <li>Je vysavač vhodný i na tvrdé podlahy? <strong>Ano, SmartClean je ideální pro všechny typy podlah.</strong></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="testimonials">
+        <div class="container">
+            <h2>Co říkají naši zákazníci</h2>
+            <div class="testimonial-cards">
+                <div class="testimonial-card">
+                    <p>"SmartClean je nejlepší vysavač, jaký jsem kdy použil! Rychlý, tichý a efektivní!"</p>
+                    <h4>Jan Novák <span>- Praha</span></h4>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Doporučuji každému, kdo hledá kvalitní vysavač pro domácnost."</p>
+                    <h4>Petra Svobodová <span>- Brno</span></h4>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Úžasný výkon a dlouhá výdrž baterie. Nemohu si ho vynachválit."</p>
+                    <h4>Martin Dvořák <span>- Ostrava</span></h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 SmartClean. Všechna práva vyhrazena.</p>
+            <p><a href="#">Podmínky použití</a> | <a href="#">Ochrana osobních údajů</a></p>
+        </div>
+    </footer>
+
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener("click", function (e) {
+                e.preventDefault();
+                let targetId = this.getAttribute('href').substring(1);
+                let target = document.getElementById(targetId);
+                let offset = 70;
+
+                if (targetId === 'faq') offset = 50; // Adjust for FAQ section
+                if (targetId === 'product') offset = 50; // Adjust for product section
+
+                window.scrollTo({
+                    top: target.offsetTop - offset,
+                    behavior: "smooth"
+                });
+            });
+        });
+    </script>
 </body>
 </html>
