--- a/test.html
+++ b/test.html
@@ -338,7 +338,7 @@
     <section id="product" class="product-section">
         <div class="container">
             <div class="product-img">
-                <img src="https://via.placeholder.com/500" alt="SmartClean Vysavač">
+                <img src="https://up-lukas3.t2.cdn-upgates.com/7/7672e7ec22ad24-vacuum.png" alt="SmartClean Vysavač">
             </div>
             <div class="product-details">
                 <h2>SmartClean Vysavač</h2>
